<resources>
    <string name="app_name">NeoCafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="phone_hint">+996 000 00 00 00</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="next">Далее</string>
    <string name="sms_code">СМС код</string>
    <string name="msg_codeWasSent">Код был отправлен на ваш номер телефона</string>
    <string name="enter_code">Введите код</string>
    <string name="send_again">Отправить повторно</string>
    <string name="confirm">Подтвердить</string>
    <string name="msg_sendCodeAgain">Если код не пришел, нажмите кнопку отправить повторно</string>
    <string name="birthday">Дата рождения</string>
    <string name="msg_enter_birthday">Введите дату рожденя для дальнейшего начисления бонусов</string>
    <string name="skip">Пропустить</string>
    <string name="enter">Вход</string>
    <string name="login_success_msg">Вход выполнен успешно</string>
    <string name="try_again_msg">Try again</string>
</resources>